# twitch-opendeck

./: .gitignore  Cargo.toml  Makefile  README.md
plugin/: manifest.json
plugin/pi/: auth.html  follower_chat.html  play_ad.html  simple.html  slow_chat.html
src/: auth.rs  auth_handler.rs  global_handler.rs  main.rs  settings.rs  twitch_api.rs
src/actions/: chat_message.rs  clear_chat.rs  create_clip.rs  create_marker.rs  emote_chat.rs  follower_chat.rs  mod.rs  play_ad.rs  setup.rs  shield_mode.rs  slow_chat.rs  sub_chat.rs  viewers.rs
