[package]
name = "twitch-opendeck"
version = "0.1.0"
edition = "2024"

[dependencies]
openaction = "2.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
log = "0.4"
simplelog = "0.12"
chrono = { version = "0.4", features = ["serde"] }
